flowlog-build/tests/errors/typechecker/tuple_placeholder_construct.dl
.type P = (a: symbol, b: symbol)
.decl In(x: symbol, y: symbol)
.decl Out(p: P)
.input In(IO="file", filename="In.csv", delimiter=",")
.output Out
Out(p) :- In(x, y), p = (x, _).
